# portmgr

./: .gitignore  CLAUDE.md  README.md  dckrmgr.py  portmgr  portmgr.py  pyproject.toml  release.sh  requirements.txt  setup.py
.github/workflows/: release.yml  tests.yml
commands/: a.py  attach.py  attach_old.py  build.py  c.py  d.py  info.py  l.py  ps.py  r.py  rm.py  s.py  t.py  u.py
portmgr/: wrapper.py
portmgr/commands/: build.py  push.py
src/portmgr/: __init__.py  portmgr.py  secrets.py  wrapper.py
src/portmgr/commands/: P.py  attach.py  build.py  down.py  e.py  logs.py  m.py  ps.py  pull.py  push.py  scan.py  stats.py  stop.py  up.py  x.py
tests/: test_argv.py  test_cli_smoke.py  test_cli_standalone.py  test_secrets_crypto.py  test_secrets_detection.py  test_secrets_status.py  test_traverse.py  test_wrapper.py
