[project]
name = "portmgr"
version = "1.9.2"
description = "Simple command interface to manage multiple Docker container"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "humanfriendly~=10.0",
    "jsonschema~=3.2.0",
    "pyyaml~=6.0.2",
    "tabulate~=0.8.9",
]

[project.optional-dependencies]
secrets = ["pyrage"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.9"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# __init__.py re-exports the package's public API (main, command_list, etc.).
"__init__.py" = ["F401"]

[tool.uv]
package = true
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project.urls]
Website = "https://github.com/Craeckie/portmgr"
Repository = "https://github.com/Craeckie/portmgr.git"
[project.scripts]
portmgr = "portmgr:main"
